flux/apps/foundry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: foundry
  ports:
    - name: foundry-port
      port: 30000
      targetPort: 30000
