flux/apps/foundry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry
  namespace: default
  annotations:
    tailscale.com/hostname: foundry
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: foundry
      port:
        number: 30000
  tls:
    - hosts: [foundry]
