flux/apps/foundry/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foundry
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: foundry
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - port: 30000
          protocol: TCP
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
